@@ -172,6 +172,22 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|charfilter
+operator|.
+name|MappingCharFilterFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|core
 operator|.
 name|KeywordTokenizerFactory
@@ -3116,6 +3132,174 @@ argument_list|(
 literal|"dummy"
 argument_list|,
 literal|"0Ã"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNormalizationWithMultipleTokenFilters
+specifier|public
+name|void
+name|testNormalizationWithMultipleTokenFilters
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|CustomAnalyzer
+name|analyzer
+init|=
+name|CustomAnalyzer
+operator|.
+name|builder
+argument_list|()
+comment|// none of these components are multi-term aware so they should not be applied
+operator|.
+name|withTokenizer
+argument_list|(
+name|WhitespaceTokenizerFactory
+operator|.
+name|class
+argument_list|,
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|)
+operator|.
+name|addTokenFilter
+argument_list|(
+name|LowerCaseFilterFactory
+operator|.
+name|class
+argument_list|,
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|)
+operator|.
+name|addTokenFilter
+argument_list|(
+name|ASCIIFoldingFilterFactory
+operator|.
+name|class
+argument_list|,
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"a b e"
+argument_list|)
+argument_list|,
+name|analyzer
+operator|.
+name|normalize
+argument_list|(
+literal|"dummy"
+argument_list|,
+literal|"Ã B Ã©"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNormalizationWithMultiplCharFilters
+specifier|public
+name|void
+name|testNormalizationWithMultiplCharFilters
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|CustomAnalyzer
+name|analyzer
+init|=
+name|CustomAnalyzer
+operator|.
+name|builder
+argument_list|()
+comment|// none of these components are multi-term aware so they should not be applied
+operator|.
+name|withTokenizer
+argument_list|(
+name|WhitespaceTokenizerFactory
+operator|.
+name|class
+argument_list|,
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|)
+operator|.
+name|addCharFilter
+argument_list|(
+name|MappingCharFilterFactory
+operator|.
+name|class
+argument_list|,
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|(
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"mapping"
+argument_list|,
+literal|"org/apache/lucene/analysis/custom/mapping1.txt"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|addCharFilter
+argument_list|(
+name|MappingCharFilterFactory
+operator|.
+name|class
+argument_list|,
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|(
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"mapping"
+argument_list|,
+literal|"org/apache/lucene/analysis/custom/mapping2.txt"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"e f c"
+argument_list|)
+argument_list|,
+name|analyzer
+operator|.
+name|normalize
+argument_list|(
+literal|"dummy"
+argument_list|,
+literal|"a b c"
 argument_list|)
 argument_list|)
 expr_stmt|;
